--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.7.0
   provider: ^6.1.2
   cached_network_image: ^3.4.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
