--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.1.2
   cached_network_image: ^3.4.0
   auto_size_text: ^3.0.0
+  responsive_sizer: ^3.3.1
 
 dev_dependencies:
   flutter_test:
